--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,25 @@ fonts
 /* ----------
 global style
  ----------*/
+ /* custom css variables */
+ :root{
+    --bg-black-900: #000000;
+    --bg-black-100: #dddddd;
+    --bg-black-50: #eff0f4;
+    --text-black-900: #000000;
+    --text-black-700: #555555;
+    --text-black-600: #666666;
+    --text-black-300: #bbbbbb;
+    --outer-shadow: 3px 3px 3px #d0d0d0, -3px -3px 3px #f8f8f8;
+    --outer-shadow-0: 0 0 0 #d0d0d0, 0 0 0 #f8f8f8;
+    --inner-shadow: inset 3px 3px 3px #d0d0d0, inset -3px -3px 3px #f8f8f8;
+}
+
 body{
     font-size: 16px;
     line-height: 1.5;
     overflow: hidden;
+    background-color: var(--bg-black-50);
 }
 
 *:not(i){
@@ -58,7 +73,22 @@ img{
     justify-content: space-between;
 }
 
+.outer-shadow{
+    box-shadow: var(--outer-shadow);
+}
 
+.inner-shadow{
+    box-shadow: var(--inner-shadow);
+}
+
+.hover-in-shadow{
+    position: relative;
+    z-index: 1;
+}
+
+.hover-in-shadow:hover{
+    box-shadow: var(--outer-shadow-0);
+}
 
 /* ----------
 header
@@ -89,5 +119,120 @@ header
 .header .hamburger-btn{
     height: 40px;
     width: 40px;
-    box-shadow: 0 0 10px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 10%;
+    justify-content: center;
+    transition: all 0.3s ease;
 }
+
+/* .header .hamburger-btn:after{
+    border-radius: 50%;
+} */
+
+.header .hamburger-btn span{
+    display: block;
+    height: 2px;
+    width: 16px;
+    background-color: var(--text-black-900);
+    position: relative;
+}
+
+.header .hamburger-btn span:before,
+.header .hamburger-btn span::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-black-900);
+}
+
+.header .hamburger-btn span:before{
+    top: -6px;
+}
+.header .hamburger-btn span:after{
+    top: 6px;
+}
+
+/*-------- NAVEGATION MENU -----------*/
+.nav-menu{
+    position: fixed;
+    background-color: var(--bg-black-50);
+    padding: 0 15px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0;
+    visibility: hidden;
+    overflow-y: auto;
+}
+
+.nav-menu .close-nav-menu{
+    height: 40px;
+    width: 40px;
+    display: block;
+    font-size: 35px;
+    line-height: 35px;
+    border-radius: 10px;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    cursor: pointer;
+    text-align: center;
+    color: var(--text-black-600);
+    transition: all 0.3s ease;
+}
+
+.nav-menu-inner{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav-menu ul{
+    padding: 15px;
+}
+
+.nav-menu ul li{
+    display: block;
+    margin-bottom: 20px;
+}
+
+.nav-menu ul li:last-child{
+    margin-bottom: 0;
+}
+
+.nav-menu ul li a{
+    display: inline-block;
+    font-size: 28px;
+    font-weight: 600;
+    color: var(--text-black-700);
+    padding: 5px 30px;
+    text-transform: capitalize;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+}
+
+.nav-menu ul li a.active{
+    color: violet;
+}
+
+.nav-menu ul li a:after{
+    border-radius: 30px;
+}
+
+.nav-menu .copyright-text{
+    position: absolute;
+    top: 50%;
+    font-size: 15px;
+    color: var(--text-black-600);
+    transform: translateY(-50%) rotate(-90deg);
+    left: -60;
+}
+
+
