--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,27 @@ img{
     box-shadow: var(--outer-shadow-0);
 }
 
+.align-items-center{
+    align-items: center;
+}
+
+.btn-1{
+    padding: 10px 25px;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-black-700);
+    background-color: transparent;
+    line-height: 1.5;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+    display: inline-block;
+}
+
+.section-title{
+    background-color: red;
+}
+
 /* ----------
 header
  ----------*/
@@ -109,7 +130,7 @@ header
     height: 40px;
     width: 40px;
     font-size: 24px;
-    border-radius: 50%;
+    border-radius: 10%;
     color: #fb839e;
     border: 2px solid #fb839e;
     font-weight: 600;
@@ -235,4 +256,66 @@ header
     left: -60;
 }
 
+/* HOME SECTION START */
+
+.home-section{
+    position: relative;
+}
+
+.home-section .full-screen{
+    padding: 50px 0;
+    min-height: 100vh;
+}
+
+.home-section .home-text,
+.home-section .home-img{
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 0 15px;
+}
+
+.home-section .home-text p{
+    color: var(--text-black-300);
+    font-size: 18px;
+    text-transform: capitalize;
+    margin: 0;
+}
+.home-section .home-text h2{ /* I'm Alexsandro */
+    font-size: 55px;
+    font-weight: 500;
+    color: var(--text-black-900);
+    margin: 0;
+}
+.home-section .home-text h1{
+    font-size: 20px;
+    font-weight: 300;
+    color: var(--text-black-700);
+    margin: 0;
+    text-transform: capitalize;
+}
+
+.home-section .home-text .btn-1{
+    margin-top: 30px;
+}
+
+.home-section .home-img .img-box{
+    max-width: 450px;
+    display: block;
+    margin: auto;
+    border-radius: 30%; /*arredonda a imagem da home*/
+    padding: 15px;
+}
+
+.home-section .home-img .img-box img{
+    width: 100%; 
+    border-radius: 30%; /*arredonda a imagem da home*/
+    /* border: 10px solid transparent; */
+}
+
+/*-- ABOUT SECTION START --*/
+
+.about-section{
+    background-color: red;
+    padding: 80px 0 80px;
+}
 
