--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ body{
     line-height: 1.5;
     overflow: hidden;
     background-color: var(--bg-black-50);
+    overflow:auto;
+    height:100%    
 }
 
 *:not(i){
@@ -108,7 +110,25 @@ img{
 }
 
 .section-title{
-    background-color: red;
+    padding: 0 15px;
+    flex: 0 0 100%;
+    text-align: center;
+    margin-bottom: 60px;
+}
+.section-title h2{
+    display: inline-block;
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--text-black-900);
+    text-transform: uppercase;
+    margin: 0;
+}
+.section-title h2:before{
+    content: attr(data-heading);
+    display: block;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--text-black-600);
 }
 
 /* ----------
@@ -253,7 +273,7 @@ header
     font-size: 15px;
     color: var(--text-black-600);
     transform: translateY(-50%) rotate(-90deg);
-    left: -60;
+    left: -60px;
 }
 
 /* HOME SECTION START */
@@ -309,13 +329,76 @@ header
 .home-section .home-img .img-box img{
     width: 100%; 
     border-radius: 30%; /*arredonda a imagem da home*/
-    /* border: 10px solid transparent; */
+    border: 10px solid transparent;
 }
 
 /*-- ABOUT SECTION START --*/
 
 .about-section{
-    background-color: red;
     padding: 80px 0 80px;
+    min-height: 100vh;
 }
+
+.about-section .about-img{
+    flex: 0 0 40%;
+    max-width: 40%;
+    padding: 0 15px;
+}
+
+.about-section .about-img .img-box{
+    padding: 15px;
+}
+
+.about-section .about-img .img-box img{ /* segunda imagem */
+    width: 100%;
+    border: 10px solid transparent;
+    border-radius: 10%;
+}
+
+.about-section .about-img .social-links{
+    margin-top: 20px;
+    text-align: center;
+}
+
+.about-section .about-img .social-links a{
+    display: inline;
+    font-size: 26px;
+    text-align: center;
+    line-height: 40px;
+    color: var(--text-black-600);
+    margin: 0 5px;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.about-section .about-img .social-links a:hover{
+    color: violet;
+}
+
+.about-section .about-info{
+    flex: 0 0 60%;
+    max-width: 60%;
+    padding: 0 15px;
+}
+
+.about-section .about-info p{
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 15px;
+    color: var(--text-black-600);
+}
+.about-section .about-info span{
+    font-weight: 600;
+}
+.about-section .about-info .btn-1{
+    margin: 30px 20px 0 0;
+}
+
+.about-section .about-tabs{
+    padding: 60px 15px 50px;
+    flex: 0 0 100%;
+    max-width: 100%;
+    text-align: center;
+}
+
 
