--- a/css/style.css
+++ b/css/style.css
@@ -400,5 +400,31 @@ header
     max-width: 100%;
     text-align: center;
 }
+.about-section .about-tabs .tab-item{
+    display: inline-block;
+    margin: 0 5px 10px;
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+    font-size: 16px;
+    color: var(--text-black-600);
+    font-weight: 500;
+    text-transform: capitalize;
+}
+.about-section .about-tabs .tab-item:hover:not(.active){
+    opacity: 0.6;
+}
+.about-section .about-tabs .tab-item.active{
+    color: var(--text-black-900);
+}
 
-
+.about-section .tab-content{ /*cores da skills*/
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+.about-section .skills .skill-item{
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 0 15px;
+}
