--- a/css/style.css
+++ b/css/style.css
@@ -423,8 +423,64 @@ header
     flex: 0 0 100%;
     max-width: 100%;
 }
+.about-section .skills{
+    padding: 0 0 40px;
+}
 .about-section .skills .skill-item{
     flex: 0 0 50%;
     max-width: 50%;
     padding: 0 15px;
+}
+.about-section .skills .skill-item p{
+    font-size: 16px;
+    color: var(--text-black-600);
+    text-transform: capitalize;
+    margin: 0 0 10px;
+}
+.about-section .skills .skill-item .progress{
+    height: 20px;
+    border-radius: 10px;
+    position: relative;
+}  
+.about-section .skills .skill-item .progress-bar{
+    background-color: var(--text-black-600);
+    height: 6px;
+    left: 7px;
+    top: 7px;
+    position: absolute;
+    border-radius: 10px;
+}
+.about-section .skills .skill-item .progress-bar span{
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-black-600);
+    margin-top: -40px;
+}
+
+.about-section .experience{
+    padding-bottom: 80px;
+}
+.about-section .timeline{
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+}
+.about-section .timeline:before{
+    content: '';
+    width: 10px;
+    height: 100%;
+    position: absolute;
+}
+.about-section .timeline .timeline-item{
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 0 15px;
+}
+.about-section .timeline .timeline-item-inner{
+    padding: 30px;
+    border-radius: 10px;
+    position: relative;
 }
