--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,17 @@ img{
     display: inline-block;
 }
 
+@keyframes fadeInTop{
+    0%{
+        opacity: 0;
+        transform: translateY(-25px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
 .section-title{
     padding: 0 15px;
     flex: 0 0 100%;
@@ -422,6 +433,11 @@ header
 .about-section .tab-content{ /*cores da skills*/
     flex: 0 0 100%;
     max-width: 100%;
+    display: none;
+}
+.about-section .tab-content.active{
+    display: block;
+    animation: fadeInTop 0.5s ease;
 }
 .about-section .skills{
     padding: 0 0 40px;
@@ -478,9 +494,46 @@ header
     flex: 0 0 100%;
     max-width: 100%;
     padding: 0 15px;
+    margin-bottom: 20px;
 }
 .about-section .timeline .timeline-item-inner{
     padding: 30px;
     border-radius: 10px;
     position: relative;
+}
+.about-section .timeline .timeline-item .icon{
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 40px;
+    border: 1px solid var(--bg-black-100);
+    border-radius: 10%;
+    font-size: 16px;
+    color: var(--text-black-700);
+}
+.about-section .timeline .timeline-item-inner span{
+    font-weight: 500;
+    color: var(--bg-black-900);
+    display: block;
+    margin: 0 0 10px;
+    text-transform: capitalize;
+}
+.about-section .timeline .timeline-item-inner h3{
+    font-size: 20px;
+    color: var(--text-black-700);
+    font-weight: 600;
+    margin: 0 0 5px;
+    text-transform: capitalize;
+}
+.about-section .timeline .timeline-item-inner h4{
+    font-size: 16px;
+    font-style: italic;
+    color: var(--text-black-600);
+    margin: 0;
+}
+.about-section .timeline .timeline-item-inner p{
+    font-size: 16px;
+    color: var(--text-black-600);
+    line-height: 26px;
+    margin: 15px 0 0;
 }
