--- a/css/style.css
+++ b/css/style.css
@@ -575,17 +575,63 @@ header
     flex: 0 0 33.33%;
     max-width: 33.33%;
     padding: 15px;
+    display: flex;
+    flex-wrap: wrap;
 }
 .portfolio-section .portfolio-item-inner{
-    border-radius: 10%;
-}
-.portfolio-section .portfolio-item-inner-img img{
-    border-radius: 50%;
+    border-radius: 10px;
+    cursor: pointer;
     width: 100%;
 }
-.portfolio-section .portfolio-item-inner-img .view-project{
-    display: none;
+.portfolio-section .portfolio-item-img img{
+    border-radius: 10px;
+    width: 100%;
+    transition: all 0.3s ease;
+}
+.portfolio-section .portfolio-item-inner:hover .portfolio-item-img img{
+    transform: translateY(-25px);
+}
+.portfolio-section .portfolio-item-img{
+    position: relative;
+}
+.portfolio-section .portfolio-item-img .view-project{
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-black-700);
+    transition: all 0.3s ease;
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    transform: translateY(-5px);
+    z-index: -1;
+    opacity: 0;
+}
+.portfolio-section .portfolio-item-inner:hover .view-project{
+    transform:translateY(0px);
+    opacity: 1;
 }
 .portfolio-section .portfolio-item-details{
     display: none;
+}
+.portfolio-section .portfolio-item-inner p{
+    font-size: 16px;
+    margin: 10px 0 0;
+    color: var(--text-black-600);
+    text-transform: capitalize;
+}
+
+
+/*------------- portfolio popup start --------*/
+.portfolio-popup{
+    background-color: var(--bg-black-50);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+.portfolio-popup .pp-img{
+    max-width: 300px;
 }
