--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ global style
     --bg-black-900: #000000;
     --bg-black-100: #dddddd;
     --bg-black-50: #eff0f4;
+    --bg-opacity: rgba(255,255,255,0.5);
     --text-black-900: #000000;
     --text-black-700: #555555;
     --text-black-600: #666666;
@@ -24,10 +25,11 @@ global style
 body{
     font-size: 16px;
     line-height: 1.5;
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: var(--bg-black-50);
-    overflow:auto;
-    height:100%    
+}
+body.stop-scrolling{
+    overflow-y: hidden;
 }
 
 *:not(i){
@@ -578,6 +580,13 @@ header
     display: flex;
     flex-wrap: wrap;
 }
+.portfolio-section .portfolio-item.hide{
+    display: none;
+}
+.portfolio-section .portfolio-item.show{
+    display: block;
+    animation: fadeInTop 0.5s ease;
+}
 .portfolio-section .portfolio-item-inner{
     border-radius: 10px;
     cursor: pointer;
@@ -631,7 +640,204 @@ header
     width: 100%;
     height: 100%;
     z-index: 1000;
+    overflow-y: scroll;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+}
+.portfolio-popup.open{
+    visibility: visible;
+    opacity: 1;
+}
+.portfolio-popup .pp-loader{
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1005;
+    background-color: var(--bg-opacity);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+    opacity: 0;
+}
+.portfolio-popup .pp-loader.active{
+    visibility: visible;
+    opacity: 1;
+}
+.portfolio-popup .pp-loader div{
+    height: 40px;
+    width: 40px;
+    border: 3px solid gray;
+    border-radius: 50%;
+    border-right: 3px transparent;
+    animation: spin 2s linear infinite;
+}
+.portfolio-popup .pp-details{
+    max-width: 1350px;
+    width: calc(85% + 30px);
+    margin:auto;
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+}
+.portfolio-popup .pp-details-inner{
+    padding: 30px 0;
+}
+.portfolio-popup .pp-title{
+    padding: 0 15px;
+}
+.portfolio-popup .pp-title h2{
+    font-size: 28px;
+    color: var(--text-black-900);
+    text-transform: capitalize;
+    font-weight: 600;
+    margin: 0 0 5px;
+}
+.portfolio-popup .pp-title p{
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--text-black-600);
+    margin: 0 0 15px;
+    border-bottom: 1px solid var(--bg-black-100);
+    padding-bottom: 10px;
+}
+.portfolio-popup .pp-project-details h3{
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--text-black-700);
+    margin: 0 0 15px;
+    text-transform: capitalize;
+}
+.portfolio-popup .description{
+    flex: 0 0 65%;
+    max-width: 65%;
+    padding: 0 15px;
+}
+.portfolio-popup .description p{
+    font-size: 16px;
+    color: var(--text-black-600);
+    line-height: 26px;
+    margin: 0;
+}
+.portfolio-popup .description p span{
+    font-weight: 400;
+}
+.portfolio-popup .info{
+    flex: 0 0 35%;
+    max-width: 35%;
+    padding: 0 15px;
+}
+.portfolio-popup .info ul li{
+    display: block;
+    margin-bottom: 10px;
+    font-weight: 600;
+    color: var(--text-black-600);
+    font-size: 16px;
+}
+.portfolio-popup .info ul li span{
+    font-weight: 400;
+}
+.portfolio-popup .info ul li:last-child{
+    margin-bottom: 0;
+}
+.portfolio-popup .separator{
+    height: 1px;
+    width: 100%;
+    display: block;
+    background-color: var(--bg-black-100);
+
 }
 .portfolio-popup .pp-img{
-    max-width: 300px;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    padding: 10px;
+    border-radius: 5px;
+}
+.portfolio-popup .pp-main{
+    min-height: 100vh;
+    max-width: 1350px;
+    width: 85%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.portfolio-popup .pp-main-inner{
+    padding: 70px 0 50px;
+    position: relative;
+}
+.portfolio-popup .pp-project-details-btn{
+    position: absolute;
+    left: 0;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-black-700);
+    top: 15px;
+    cursor: pointer;
+    padding: 0 15px;
+    height: 40px;
+    line-height: 40px;
+    transition: all 0.3s ease;
+}
+.portfolio-popup .pp-project-details-btn i{
+    margin-left: 4px;
+}
+.portfolio-popup .pp-close{
+    position: absolute;
+    right: 0;
+    border-radius: 10px;
+    height: 40px;
+    width: 40px;
+    top: 15px;
+    text-align: center;
+    line-height: 35px;
+    font-size: 35px;
+    color: var(--bg-black-700);
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+.portfolio-popup .pp-counter{
+    position: absolute;
+    right: 0;
+    height: 50px;
+    line-height: 40px;
+    bottom: 5px;
+    font-size: 16px;
+    color: var(--text-black-600);
+}
+.portfolio-popup .pp-prev,
+.portfolio-popup .pp-next{
+    position: fixed;
+    top: 50%;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+    z-index: 1010;
+    color: var(--text-black-900);
+    transition: all 0.3s ease;
+    opacity: 0.5;
+}
+.portfolio-popup .pp-prev:hover,
+.portfolio-popup .pp-next:hover{
+    opacity: 1;
+}
+.portfolio-popup .pp-prev i,
+.portfolio-popup .pp-next i{
+    line-height: 40px;
+}
+.portfolio-popup .pp-prev i{
+    transform: rotate(180deg);
+}
+.portfolio-popup .pp-prev{
+    left: 15px;
+}
+.portfolio-popup .pp-next{
+    right: 15px;
 }
