--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,19 @@ global style
     --outer-shadow-0: 0 0 0 #d0d0d0, 0 0 0 #f8f8f8;
     --inner-shadow: inset 3px 3px 3px #d0d0d0, inset -3px -3px 3px #f8f8f8;
 }
+/* dark theme */
+body.dark{
+    --bg-black-900: #ffffff;
+    --bg-black-100: #353535;
+    --bg-black-50: #2b2b2b;
+    --bg-opacity: rgba(43,44,47,0.5);
+    --text-black-900: #ffffff;
+    --text-black-700: #ffffff;
+    --text-black-600: #bbbbbb;
+    --outer-shadow: 3px 3px 3px #222327, -3px -3px 3px #363636;
+    --outer-shadow-0: 0 0 0 #222327, 0 0 0 #363636;
+    --inner-shadow: inset 3px 3px 3px #222327, inset -3px -3px 3px #363636;
+}
 
 body{
     font-size: 16px;
@@ -143,6 +156,9 @@ img{
     font-weight: 600;
     color: var(--text-black-600);
 }
+.section.hide{
+    display: none;
+}
 
 /* ----------
 header
@@ -223,6 +239,35 @@ header
     opacity: 0;
     visibility: hidden;
     overflow-y: auto;
+}
+.fade-out-effect{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-black-50);
+    z-index: -1;
+    visibility: hidden;
+}
+.fade-out-effect.active{
+    visibility: visible;
+    z-index: 1000;
+    animation: fadeOut 0.3s ease-out;
+}
+@keyframes fadeOut{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+.nav-menu.open{
+    visibility: visible;
+    opacity: 1;
+    z-index: 999;
+    transition: all 0.3s ease;
 }
 
 .nav-menu .close-nav-menu{
@@ -848,4 +893,36 @@ header
 }
 .portfolio-popup .pp-next{
     right: 15px;
+}
+
+/*-------------- contact section ---------*/
+.contact-section{
+    padding: 80px 0 80px;
+    min-height: 60vh;
+}
+.contact-section .contact-item{
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    padding: 15px;
+}
+.contact-section .contact-item-inner{
+    padding: 5px 15px;
+    border-radius: 10px ;
+}
+.contact-section .contact-item-inner i{
+    font-size: 25px;
+}
+.contact-section .contact-item-inner span{
+    display: block;
+    font-size: 15px;
+    font-weight: 600;
+    margin: 10px 0 5px;
+    text-transform: capitalize;
+}
+.contact-section .contact-item-inner p{
+    font-size: 15px;
+    color: var(--text-black-600);
+    line-height: 26px;
+    margin: 0;
+    word-break: break-word;
 }
