--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,19 @@ img{
     display: inline-block;
 }
 
+.btn-4{
+    background-color: var(--bg-black-100);
+    margin:25px 25px 0 0;
+    padding: 10px 25px;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-black-700);
+    line-height: 1.5;
+    border-radius: 100px;
+    transition: all 0.3s ease;
+    display: inline-block;
+}
+
 @keyframes fadeInTop{
     0%{
         opacity: 0;
@@ -430,7 +443,7 @@ header
 }
 
 .about-section .about-img .social-links a:hover{
-    color: violet;
+    color: var(--text-black-700);
 }
 
 .about-section .about-info{
@@ -488,39 +501,6 @@ header
 }
 .about-section .skills{
     padding: 0 0 40px;
-}
-.about-section .skills .skill-item{
-    flex: 0 0 50%;
-    max-width: 50%;
-    padding: 0 15px;
-}
-.about-section .skills .skill-item p{
-    font-size: 16px;
-    color: var(--text-black-600);
-    text-transform: capitalize;
-    margin: 0 0 10px;
-}
-.about-section .skills .skill-item .progress{
-    height: 20px;
-    border-radius: 10px;
-    position: relative;
-}  
-.about-section .skills .skill-item .progress-bar{
-    background-color: var(--text-black-600);
-    height: 6px;
-    left: 7px;
-    top: 7px;
-    position: absolute;
-    border-radius: 10px;
-}
-.about-section .skills .skill-item .progress-bar span{
-    position: absolute;
-    right: 0;
-    top: 0;
-    font-size: 16px;
-    font-weight: 500;
-    color: var(--text-black-600);
-    margin-top: -40px;
 }
 
 .about-section .experience{
